--- a/Capio/app/src/main/res/layout/fragment_profile.xml
+++ b/Capio/app/src/main/res/layout/fragment_profile.xml
@@ -18,4 +18,9 @@
         android:textSize="80sp"
         android:text="Profile"/>
 
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="logout"/>
 </FrameLayout>
