--- a/Capio/app/src/main/res/values/colors.xml
+++ b/Capio/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#003d99</color>
     <color name="colorPrimaryDark">#002966</color>
     <color name="colorAccent">#996633</color>
+    <color name="whiteText">#FFFFFF</color>
 </resources>
