--- a/Capio/app/src/main/res/values/dimens.xml
+++ b/Capio/app/src/main/res/values/dimens.xml
@@ -10,10 +10,12 @@
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="margin_large">32dp</dimen>
     <dimen name="margin_huge">64dp</dimen>
-
     <!-- Semantic definitions -->
 
     <dimen name="horizontal_page_margin">@dimen/margin_medium</dimen>
     <dimen name="vertical_page_margin">@dimen/margin_medium</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <!-- Text size -->
+    <dimen name="text_medium">20sp</dimen>
 </resources>
