--- a/Capio/app/src/main/res/layout/fragment_profile.xml
+++ b/Capio/app/src/main/res/layout/fragment_profile.xml
@@ -17,10 +17,10 @@
         android:id="@+id/imageView"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:background="#777777"
+        android:background="#FF0000"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/ic_profile"
-        android:padding="10dp"
+        android:padding="1dp"
         app:srcCompat="@drawable/ic_profile" />
 
 
