Profil korisnika uređen, dodane sličice i tako to

--- a/Capio/app/src/main/res/layout/fragment_profile.xml
+++ b/Capio/app/src/main/res/layout/fragment_profile.xml
@@ -9,8 +9,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_height="match_parent"
-        tools:context="mihajlo.asc.hr.capio.Fragments.ProfileFragment">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/natural"
@@ -31,7 +30,7 @@
                 app:civ_border_color="#cccccc"/>
 
             <TextView
-                android:id="@+id/fullName"
+                android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
