--- a/Capio/app/src/main/res/layout/activity_real_estate_detail.xml
+++ b/Capio/app/src/main/res/layout/activity_real_estate_detail.xml
@@ -7,4 +7,17 @@
     android:layout_height="match_parent"
     tools:context="mihajlo.asc.hr.capio.Activities.RealEstateDetailActivity">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/mvieww"
+        android:layout_width="match_parent"
+        android:layout_height="250dp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
+    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
