--- a/Capio/app/src/main/res/values/colors.xml
+++ b/Capio/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#002966</color>
     <color name="colorAccent">#996633</color>
     <color name="whiteText">#FFFFFF</color>
+    <color name="blackText">#000000</color>
+    <color name="grayText1">#333333</color>
+    <color name="grayText2">#666666</color>
 </resources>
