--- a/Capio/app/src/main/res/layout/activity_real_estate_detail.xml
+++ b/Capio/app/src/main/res/layout/activity_real_estate_detail.xml
@@ -1,40 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="mihajlo.asc.hr.capio.Activities.RealEstateDetailActivity">
+    android:orientation="vertical">
 
-    <LinearLayout
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/mvieww"
+        android:layout_width="368dp"
+        android:layout_height="250dp" />
+
+    <TextView
+        android:id="@+id/textPrice"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:text="1750 kn/mj"
+        android:textColor="@color/blackText"
+        android:paddingStart="20dp"
+        android:textStyle="bold"
+        android:textSize="@dimen/text_extra_large" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/mvieww"
-            android:layout_width="match_parent"
-            android:layout_height="250dp" />
-
-        <TextView
-            android:id="@+id/textPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="1750 kn/mj"
-            android:textColor="@color/whiteText"
-            android:textSize="@dimen/text_medium"
-            />
-
-    </LinearLayout>
-
-
-
-    <ScrollView
+    <TextView
+        android:id="@+id/address"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:text="Brozova ulica 44"
+        android:textColor="@color/grayText1"
+        android:paddingStart="20dp"
+        android:textSize="@dimen/text_large" />
+
+    <TextView
+        android:id="@+id/addressCity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="10000 Zagreb, Hrvatska"
+        android:textColor="@color/grayText2"
+        android:paddingStart="20dp"
+        android:textSize="@dimen/text_medium" />
 
 
 
-    </ScrollView>
 
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
