--- a/Capio/app/src/main/res/values/dimens.xml
+++ b/Capio/app/src/main/res/values/dimens.xml
@@ -19,4 +19,7 @@
 
     <!-- Text size -->
     <dimen name="text_medium">20sp</dimen>
+    <dimen name="text_large">25sp</dimen>
+    <dimen name="text_extra_large">30sp</dimen>
+    <dimen name="text_small">15sp</dimen>
 </resources>
