--- a/Capio/app/src/main/res/layout/activity_real_estate_detail.xml
+++ b/Capio/app/src/main/res/layout/activity_real_estate_detail.xml
@@ -1,45 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white1">
 
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/mvieww"
-        android:layout_width="368dp"
-        android:layout_height="250dp" />
-
-    <TextView
-        android:id="@+id/textPrice"
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="1750 kn/mj"
-        android:textColor="@color/blackText"
-        android:paddingStart="20dp"
-        android:textStyle="bold"
-        android:textSize="@dimen/text_extra_large" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/address"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/mvieww"
+                android:layout_width="368dp"
+                android:layout_height="250dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@color/whiteText">
+
+                <TextView
+                    android:id="@+id/textPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="1750 kn/mj"
+                    android:textColor="@color/blackText"
+                    android:paddingStart="20dp"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/text_large" />
+
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Brozova ulica 44"
+                    android:textColor="@color/grayText1"
+                    android:paddingStart="20dp"
+                    android:textSize="@dimen/text_large" />
+
+                <TextView
+                    android:id="@+id/addressCity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="10000 Zagreb, Hrvatska"
+                    android:textColor="@color/grayText2"
+                    android:paddingStart="20dp"
+                    android:textSize="@dimen/text_medium" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginStart="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_small"
+                android:layout_marginTop="@dimen/margin_small"
+                android:layout_marginBottom="@dimen/margin_small"
+                android:background="@color/whiteText">
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:layout_marginStart="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_small"
+                android:layout_marginBottom="@dimen/margin_small"
+                android:background="@color/whiteText">
+
+            </View>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
+    <RelativeLayout
+        android:id="@+id/buttonContact"
+        android:background="@drawable/button_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Brozova ulica 44"
-        android:textColor="@color/grayText1"
-        android:paddingStart="20dp"
-        android:textSize="@dimen/text_large" />
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        >
 
-    <TextView
-        android:id="@+id/addressCity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="10000 Zagreb, Hrvatska"
-        android:textColor="@color/grayText2"
-        android:paddingStart="20dp"
-        android:textSize="@dimen/text_medium" />
+        <TextView
+            android:typeface="serif"
+            android:id="@+id/txtName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Kontaktiraj"
+            android:gravity="center"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
 
+    </RelativeLayout>
 
-
-
-</LinearLayout>
+</RelativeLayout>
