filter za cijenu

--- a/Capio/app/src/main/res/layout/toolbar.xml
+++ b/Capio/app/src/main/res/layout/toolbar.xml
@@ -8,6 +8,7 @@
 
 
     <ImageView
+        android:id="@+id/backButton"
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_marginLeft="20dp"
