--- a/Capio/app/src/main/res/layout/profile.xml
+++ b/Capio/app/src/main/res/layout/profile.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/profile_img"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:src="@drawable/white"
+                    android:src="@drawable/ic_profile"
                     android:layout_marginTop="30dp"
                     android:layout_marginStart="10dp" />
 
@@ -186,7 +186,7 @@
 
         </LinearLayout>
 
-        <View
+        <!--<View
             android:layout_width="match_parent"
             android:layout_height="0.1dp"
             android:background="#ACACAC"
@@ -256,12 +256,19 @@
 
             </LinearLayout>
         </LinearLayout>
+-->
+
+        <Button
+            android:id="@+id/setFilterButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="openFilter"
+            android:text="@string/set_filters_button"/>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="0.1dp"
             android:background="#ACACAC" />
-
-
 
 
         <LinearLayout
