--- a/Capio/app/src/main/res/layout/activity_real_estate_detail.xml
+++ b/Capio/app/src/main/res/layout/activity_real_estate_detail.xml
@@ -128,6 +128,30 @@
 
             </LinearLayout>
 
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="200dp"
+                android:layout_marginStart="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginBottom="@dimen/margin_small"
+                android:background="@drawable/unit_description"
+                xmlns:map="http://schemas.android.com/apk/res-auto">
+
+                <fragment
+                    android:id="@+id/map"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/margin_small"
+                    android:layout_weight="0.5"
+                    class="com.google.android.gms.maps.SupportMapFragment" />
+
+
+            </LinearLayout>
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="vertical"
