--- a/Capio/app/src/main/res/layout/fragment_realestate.xml
+++ b/Capio/app/src/main/res/layout/fragment_realestate.xml
@@ -5,6 +5,13 @@
     android:layout_height="210dp"
     android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/imageLike"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/margin_medium"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
