--- a/Capio/app/src/main/res/layout/profile.xml
+++ b/Capio/app/src/main/res/layout/profile.xml
@@ -608,4 +608,11 @@
     <!--</LinearLayout>-->
     <!--</LinearLayout>-->
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="bottom"
+        android:text="@string/logout_button"
+        android:onClick="logout"/>
+
 </FrameLayout>
